<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.jakz</groupId>
	<artifactId>romizer</artifactId>
	<version>0.1</version>
	<name>Romizer</name>
	<properties>
		<jdk.version>10</jdk.version>
		<jparsec.version>2.2.1</jparsec.version>
		<hamcrest.version>1.3</hamcrest.version>
		<gson.version>2.3.1</gson.version>
		<miglayout.version>5.0</miglayout.version>
		<zip4j.version>1.3.2</zip4j.version>
		<zip7.version>9.20-2.00beta</zip7.version>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgs>
            <arg>--add-modules</arg>
            <arg>java.xml.bind</arg>
          </compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin></artifactId>
				<version>2.6</version>  
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-4</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>jack.rm.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>${project.build.directory}/lib/</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
	<dependencies>
    <!-- pixlib related -->
    <dependency>
        <groupId>com.esotericsoftware.yamlbeans</groupId>
        <artifactId>yamlbeans</artifactId>
        <version>1.08</version>
    </dependency>
    <!-- normal -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
		<dependency>
			<groupId>org.jparsec</groupId>
			<artifactId>jparsec</artifactId>
			<version>${jparsec.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>${miglayout.version}</version>
		</dependency>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>${zip4j.version}</version>
		</dependency>
		<dependency>
		    <groupId>net.sf.sevenzipjbinding</groupId>
		    <artifactId>sevenzipjbinding</artifactId>
		    <version>${zip7.version}</version>
		</dependency>
		<dependency>
		    <groupId>net.sf.sevenzipjbinding</groupId>
		    <artifactId>sevenzipjbinding-all-platforms</artifactId>
		    <version>${zip7.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.2</version>
			<optional>true</optional>
		</dependency>
		<dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.0</version>
    </dependency>	

		<dependency>
			<groupId>com.pixbits</groupId>
			<artifactId>lib</artifactId>
			<version>0.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.jakz</groupId>
			<artifactId>romlib</artifactId>
			<version>0.1</version>
		</dependency>
	</dependencies>
</project>